--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Toorq's Random Quote Machine</h1>
+                <h1>Thor's Random Quote Machine</h1>
                 <h3>Warning: These quotes might inspire you</h3>
                 <hr>
             </div>
@@ -24,17 +24,18 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="quote-box">
-                    <p id="quote">Be like water my friend</p>
-                    <p id="author">-Bruce lee</p>
+                    <p id="quote"></p>
+                    <p id="author"></p>
 
                 </div>
                 <ul class="list-inline">
                     <li><a href="#" class="btn btn-default btn-lg get-quote"><i class="fa fa-quote-left fa-fw" style="margin-right: 10px;"></i>Get Quote</a></li>
-                    <li><a href="#" class="btn btn-default btn-lg share-quote"><i class="fa-duotone fa-solid fa-face-awesome" style="margin-right: 10px;"></i>Share Quote</a></li>
+                    <li><a href="#" class="btn btn-default btn-lg share-quote"><i class="fas fa-face-awesome" style="margin-right: 10px;"></i>Share Quote</a></li>
                 </ul>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
