--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul class="list-inline">
                     <li><a href="#" class="btn btn-default btn-lg get-quote"><i class="fa fa-quote-left fa-fw" style="margin-right: 10px;"></i>Get Quote</a></li>
-                    <li><a href="#" class="btn btn-default btn-lg share-quote"><i class="fas fa-face-awesome" style="margin-right: 10px;"></i>Share Quote</a></li>
+                    <li><a href="#" class="btn btn-default btn-lg share-quote"><i class="fa-solid fa-face-awesome" style="margin-right: 10px;"></i>Google Quote</a></li>
                 </ul>
             </div>
         </div>
